--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,14 +1,19 @@
-customtkinter
-aiohttp
-Pillow
-requests
-python-socketio
-opencv-python
-numpy
-mss
-av
-aiortc
-sounddevice
-cryptography
-python-dotenv
-pystray
+customtkinter==5.2.2
+aiohttp==3.12.13
+pillow==11.3.0
+requests==2.32.4
+python-socketio==5.13.0
+opencv-python==4.11.0.86
+numpy==2.2.6
+mss==10.0.0
+av==14.4.0
+aiortc==1.13.0
+sounddevice==0.5.2
+cryptography==45.0.5
+pystray==0.19.5
+pywin32==311
+psutil==7.0.0
+WMI==1.5.1
+py-cpuinfo==9.0.0
+pynput==1.8.1
+keyboard==0.13.5
